--- a/style.css
+++ b/style.css
@@ -162,12 +162,12 @@ flex-direction: column;
 .topBox{
     display: flex;
     flex: 1;
-    border: solid 1px black;
+    
 }
 .bottomBox{
     display: flex;
     flex: 1;
-    border: solid 1px black;
+    
     
 }
 .middleBox_left_top{
@@ -287,4 +287,146 @@ flex-direction: column;
 }
 .right1{
     background-color: black;
+}
+/* -----------RIGHT COLUMN------------ */
+
+.right_column{
+    display: flex;
+    flex-direction: column
+}
+.right_column_top_box, .right_column_bottom_box {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    
+}
+.right_column_top_box_left_column{
+    flex: 1;
+    
+    flex-direction: column;
+    display: flex;
+}
+.right_column_top_box_left_column_top_box{
+    display:flex;
+    flex:1.3;
+    
+}
+.right_column_top_box_left_column_top_box_RIGHT_SQUARE{
+    flex:1;
+    background-color: #f7de1b
+
+}
+.right_column_top_box_left_column_top_box_LEFT_SQUARE{
+    flex:1;
+    background-color: black;
+}
+.right_column_top_box_left_column_bottom_box{
+    flex:5;
+    display: flex;
+    flex-direction: column;
+}
+.right_column_top_box_left_column_top_box_ONE{
+    flex: 1;
+    border: solid 1px black;
+    background-color: #f7de1b;
+    
+}
+.right_column_top_box_left_column_top_box_TWO{
+    flex:1;
+    background-color: black;
+    
+}
+.right_column_top_box_left_column_top_box_THREE{
+    flex: 1;
+    border: solid 1px black;
+    
+}
+.right_column_top_box_left_column_top_box_FOUR{
+    flex: 1;
+}
+
+
+.right_column_top_box_right_column{
+    flex:2;
+    display: flex;
+    flex-direction: column;
+}
+.right_column_top_box_right_column_TOP_BOX{
+    flex:1.1;
+    border: solid 1px black;
+}
+.right_column_top_box_right_column_column_container{
+    flex: 4.1 ;
+    display: flex;
+    flex-direction: row;
+}
+.right_column_top_box_right_column_LEFT_COLUMN{
+    display: flex;
+    flex: 2;
+    flex-direction: column;
+}
+
+.right_column_top_box_right_column_LEFT_COMLUMN_LEFT_TOP_BOX{
+    flex: 1;
+    
+}
+.right_column_top_box_right_column_LEFT_COMLUMN_LEFT_BOTTOM_BOX{
+    flex: 1;
+    background-color: black;
+
+}
+.right_column_top_box_right_column_RIGHT_COLUMN{
+    flex:1;
+    display:flex;
+    flex-direction: column;
+}
+.right_column_top_box_right_column_RIGHT_COLUMN_TOP_BOX{
+    flex:1;
+    background-color: #f7de1b;
+
+}
+.right_column_top_box_right_column_RIGHT_COLUMN_BOTTOM_BOX{
+    flex: 1;
+}
+/* -----BOTTOM BOX------ */
+.right_column_bottom_box{
+    display:flex;
+    flex-direction: column;
+}
+.right_column_bottom_box_column_CONTAINER{
+    display: flex;
+    flex:3.8;
+    
+}
+
+.right_column_bottom_box_bottom_row{
+    display:flex;
+    flex: 1;
+}
+.right_column_bottom_box_left_column_bigSquare {
+    flex: 3.8;
+    background-color: #2170bf;
+}
+.right_column_bottom_box_right_column{
+    flex: 1.1;
+    display:flex;
+    flex-direction: column;
+}
+.right_column_bottom_box_right_column_TOP{
+    flex:1;
+}
+.right_column_bottom_box_right_column_BOTTOM{
+    flex:1;
+    border: solid 1px black;
+}
+.right_column_bottom_box_bottom_row{
+    display:flex;
+}
+.right_column_bottom_box_bottom_row_left{
+    flex:1.5;     
+}
+.right_column_bottom_box_bottom_row_right{
+    flex:1;
+    border: solid 1px black;
+
 }
